--- a/sparkle-base-mgt/pom.xml
+++ b/sparkle-base-mgt/pom.xml
@@ -13,11 +13,20 @@
     <packaging>pom</packaging>
     <modules>
         <module>sparkle-base-api</module>
+        <module>sparkle-base</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.sparkle.cloud</groupId>
+            <artifactId>sparkle-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
