--- a/sparkle-base-mgt/sparkle-base/src/main/resources/bootstrap.yml
+++ b/sparkle-base-mgt/sparkle-base/src/main/resources/bootstrap.yml
@@ -4,9 +4,11 @@ spring:
       config:
         server-addr: localhost:8848
         namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
-        name: dev
-        group: DEFAULT_GROUP
       discovery:
         server-addr: localhost:8848
+  application:
+    name: sparkle-base
   profiles:
-    active: dev
+    - dev
+server:
+  port: 9099
