--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,13 @@
 
     <modules>
         <module>sparkle-common</module>
-        <module>sparkle-base-mgt</module>
-        <module>sparkle-product-mgt</module>
         <module>sparkle-web</module>
         <module>sparkle-gateway</module>
+        <module>sparkle-user-mgt</module>
+        <module>sparkle-merchant-mgt</module>
+        <module>sparkle-merchant-mgt/sparkle-merchant</module>
+        <module>sparkle-merchant-mgt/sparkle-merchant-api</module>
+        <module>sparkle-bill-mgt</module>
     </modules>
 
     <properties>
@@ -36,8 +39,8 @@
         <servlet-api.version>3.1.0</servlet-api.version>
         <guava.version>30.1.1-jre</guava.version>
         <gson.version>2.8.5</gson.version>
-        <lombok.version>1.18.10</lombok.version>
-        <hutool.version>4.6.8</hutool.version>
+        <lombok.version>1.18.26</lombok.version>
+        <hutool.version>5.8.18</hutool.version>
         <slf4j.version>1.7.25</slf4j.version>
         <fastjson.version>1.2.60</fastjson.version>
         <mysql.version>8.0.23</mysql.version>
