--- a/sparkle-gateway/src/main/resources/bootstrap.yml
+++ b/sparkle-gateway/src/main/resources/bootstrap.yml
@@ -3,13 +3,13 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+        namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
       config:
         server-addr: 127.0.0.1:8848
         namespace: 29fb1eaf-8626-4ad0-952c-bb7a2ef9a572
+        prefix: ${spring.application.name}-${spring.profiles.active}
         file-extension: yaml
+  profiles:
+    active: dev
   application:
     name: sparkle-gateway
-  profiles:
-    - dev
-server:
-  port: 8092
